methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:7: error: not found: value len
  for(i<-1 to len){
              ^