methods.returning.MethodsReturning.scala.code
var seenBaggle = false ;
/*var sawBaggle = false ;
val len = 7 ;*/

def haveBaggle():Boolean = {
  seenBaggle = false
  for(i<-1 to len){
    seenBaggle = seenBaggle || isOverBaggle();
    forward();
  }
  return seenBaggle ;
}/*
while(!sawBaggle){
  sawBaggle = haveBaggle()
  if(!sawBaggle){
    right();
    forward();
    left();
  }
}*/
